# testproj

./: pyproject.toml
testproj/: payments.py
tests/: conftest.py
tests/accounts/: conftest.py  test_accounts.py
tests/payments/: test_payments.py
