[tool.poetry]
name = "testproj"
version = "0.1.0"
description = ""
authors = ["Vladimir Puzakov <puzakov@tochka.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
Faker = "^13.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
